<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verify.VerifyFragment"
    android:background="@color/background">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/who_is_gradiant"
        android:alpha=".8"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgvw_person"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/xxlg_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtvw_who_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imgvw_person"
        android:layout_marginEnd="@dimen/xxlg_margin"
        android:layout_marginStart="@dimen/xxlg_margin"
        android:layout_marginTop="@dimen/margin"
        android:textAlignment="center"
        android:text="@string/who_is"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="64sp"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:cornerRadius="40dp"
        android:layout_marginHorizontal="@dimen/xxlg_margin"
        android:text="@string/capture"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="40dp"
        android:layout_marginHorizontal="@dimen/xxlg_margin"
        android:layout_marginBottom="@dimen/xlg_margin"
        android:backgroundTint="#FF5E5E"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>