<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.capture.CaptureFragment"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtvw_title_capture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:lines="1"
        android:text="@string/capture"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="64sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/xlg_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinplyt_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtvw_title_capture"
        android:layout_marginTop="@dimen/xxlg_margin"
        android:layout_marginHorizontal="@dimen/xxlg_margin"
        android:hint="@string/name"
        android:textColorHint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medttxt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinplyt_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtinplyt_name"
        android:layout_marginTop="@dimen/xxlg_margin"
        android:layout_marginHorizontal="@dimen/xxlg_margin"
        android:hint="@string/description"
        android:textColorHint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medttxt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/xxlg_margin"
        app:cornerRadius="48dp"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_capture"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>